--- a/Assets/Scripts/World/Launch/World.Launch.asmdef
+++ b/Assets/Scripts/World/Launch/World.Launch.asmdef
@@ -5,7 +5,8 @@
         "GUID:04d29152d9876834193177b367c470da",
         "GUID:d1bec1c68185bd447afc619ddae34610",
         "GUID:0d8beb7f090555447a6cf5ce9e54dbb4",
-        "GUID:8f5c2fa3235d84e4389e3e6046bf7575"
+        "GUID:8f5c2fa3235d84e4389e3e6046bf7575",
+        "GUID:b0214a6008ed146ff8f122a6a9c2f6cc"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
