--- a/Assets/Scripts/World/World.asmdef
+++ b/Assets/Scripts/World/World.asmdef
@@ -8,7 +8,8 @@
         "GUID:8f5c2fa3235d84e4389e3e6046bf7575",
         "GUID:8fa6e7a0e56f6b944be32267533e26cb",
         "GUID:49b49c76ee64f6b41bf28ef951cb0e50",
-        "GUID:0d8beb7f090555447a6cf5ce9e54dbb4"
+        "GUID:0d8beb7f090555447a6cf5ce9e54dbb4",
+        "GUID:b0214a6008ed146ff8f122a6a9c2f6cc"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
