--- a/Assets/Scripts/Battle/Launch/Battle.Launch.asmdef
+++ b/Assets/Scripts/Battle/Launch/Battle.Launch.asmdef
@@ -7,7 +7,8 @@
         "GUID:9e24947de15b9834991c9d8411ea37cf",
         "GUID:e0c2f010bd1e45a42b317a94b3cbb088",
         "GUID:84651a3751eca9349aac36a66bba901b",
-        "GUID:0d8beb7f090555447a6cf5ce9e54dbb4"
+        "GUID:0d8beb7f090555447a6cf5ce9e54dbb4",
+        "GUID:b0214a6008ed146ff8f122a6a9c2f6cc"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
