--- a/Assets/Scripts/Battle/View/Battle.View.asmdef
+++ b/Assets/Scripts/Battle/View/Battle.View.asmdef
@@ -3,7 +3,8 @@
     "rootNamespace": "",
     "references": [
         "GUID:e0c2f010bd1e45a42b317a94b3cbb088",
-        "GUID:0d8beb7f090555447a6cf5ce9e54dbb4"
+        "GUID:0d8beb7f090555447a6cf5ce9e54dbb4",
+        "GUID:b0214a6008ed146ff8f122a6a9c2f6cc"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
