--- a/Assets/Scripts/Battle/View/Battle.View.asmdef
+++ b/Assets/Scripts/Battle/View/Battle.View.asmdef
@@ -4,7 +4,8 @@
     "references": [
         "GUID:e0c2f010bd1e45a42b317a94b3cbb088",
         "GUID:0d8beb7f090555447a6cf5ce9e54dbb4",
-        "GUID:b0214a6008ed146ff8f122a6a9c2f6cc"
+        "GUID:b0214a6008ed146ff8f122a6a9c2f6cc",
+        "GUID:4118803641067ef4da7125d9518c5142"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
